# yoyo-server

./: .env.example  .gitignore  CLAUDE.md  Makefile  pyproject.toml
alembic/versions/: 3aedffe93b0f_add_user_trips_table.py  586af5b9c4e1_add_users_table_and_user_id_to_members.py  aaf26d6d6209_add_permission_settings_to_trips.py
app/: balances.py  database.py  deps.py  email.py  exchange.py  logging_config.py  main.py  middleware.py  models.py  schemas.py  serializers.py
app/receipt/: base.py  factory.py  openai_provider.py
app/routes/: expenses.py  members.py  receipts.py  settlements.py  trips.py  users.py
docs/: logging.md
